r2e-compile-tests/compile-fail/extractor_dual_route_ambiguous.stderr
error[E0283]: type annotations needed
  --> compile-fail/extractor_dual_route_ambiguous.rs:81:14
   |
81 |             .register_controller::<KeyController>()
   |              ^^^^^^^^^^^^^^^^^^^
   |
   = note: multiple `impl`s satisfying `std::option::Option<ApiKey>: FromRequestPartsVia<HCons<ApiKeys, HNil>, _>` found in the `r2e_core` crate:
           - impl<S, T, M> FromRequestPartsVia<S, ViaOpt<M>> for std::option::Option<T>
             where S: std::marker::Send, S: Sync, T: OptionalFromRequestPartsVia<S, M>;
           - impl<S, T> FromRequestPartsVia<S, ViaAxum> for T
             where S: std::marker::Send, S: Sync, T: FromRequestParts<S>;
note: required for `__R2eRequestData_KeyController<(_,)>` to implement `FromRequestParts<HCons<ApiKeys, HNil>>`
  --> compile-fail/extractor_dual_route_ambiguous.rs:61:1
   |
61 | #[controller(path = "/k")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required for `KeyController` to implement `Controller<HCons<ApiKeys, HNil>, ((_,),)>`
  --> compile-fail/extractor_dual_route_ambiguous.rs:67:1
   |
67 | #[routes]
   | ^^^^^^^^^ unsatisfied trait bound introduced here
68 | impl KeyController {
   |      ^^^^^^^^^^^^^
   = note: this error originates in the attribute macro `controller` which comes from the expansion of the attribute macro `routes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try using a fully qualified path to specify the expected types
   |
77 ~         <r2e::AppBuilder<HCons<ApiKeys, HNil>> as r2e::RegisterController<HCons<ApiKeys, HNil>, ((__M0,),), ()>>::register_controller::<KeyController>(AppBuilder::new()
78 |             .provide(ApiKeys)
79 |             .build_state()
80 ~             .await)
   |

error[E0283]: type annotations needed
  --> compile-fail/extractor_dual_route_ambiguous.rs:81:14
   |
81 |             .register_controller::<KeyController>()
   |              ^^^^^^^^^^^^^^^^^^^   ------------- type must be known at this point
   |
   = note: multiple `impl`s satisfying `std::option::Option<ApiKey>: FromRequestPartsVia<HCons<ApiKeys, HNil>, _>` found in the `r2e_core` crate:
           - impl<S, T, M> FromRequestPartsVia<S, ViaOpt<M>> for std::option::Option<T>
             where S: std::marker::Send, S: Sync, T: OptionalFromRequestPartsVia<S, M>;
           - impl<S, T> FromRequestPartsVia<S, ViaAxum> for T
             where S: std::marker::Send, S: Sync, T: FromRequestParts<S>;
note: required for `__R2eRequestData_KeyController<(_,)>` to implement `FromRequestParts<HCons<ApiKeys, HNil>>`
  --> compile-fail/extractor_dual_route_ambiguous.rs:61:1
   |
61 | #[controller(path = "/k")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^
note: required for `KeyController` to implement `Controller<HCons<ApiKeys, HNil>, ((_,),)>`
  --> compile-fail/extractor_dual_route_ambiguous.rs:67:1
   |
67 | #[routes]
   | ^^^^^^^^^ unsatisfied trait bound introduced here
68 | impl KeyController {
   |      ^^^^^^^^^^^^^
note: required by a bound in `register_controller`
  --> $WORKSPACE/r2e-core/src/builder/registration.rs
   |
   |     fn register_controller<C>(self) -> Self
   |        ------------------- required by a bound in this associated function
   |     where
   |         C: Controller<T, W>,
   |            ^^^^^^^^^^^^^^^^ required by this bound in `RegisterController::register_controller`
   = note: this error originates in the attribute macro `controller` which comes from the expansion of the attribute macro `routes` (in Nightly builds, run with -Z macro-backtrace for more info)
help: try using a fully qualified path to specify the expected types
   |
77 ~         <r2e::AppBuilder<HCons<ApiKeys, HNil>> as r2e::RegisterController<HCons<ApiKeys, HNil>, ((__M0,),), ()>>::register_controller::<KeyController>(AppBuilder::new()
78 |             .provide(ApiKeys)
79 |             .build_state()
80 ~             .await)
   |
